Configure EventLog from appsettings

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -25,10 +25,13 @@
         "Args": {
           "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
-      },
+      },      
       {
         "Name": "EventLog",
         "Args": {
+          "source": "Web Api",
+          "logName": "Application",
+          "manageEventSource": true,
           "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
       }
