Replace serilog with built in logger
1. Remove appsettings development
2. Replace appsettings serilog with builting configuration
3. Add logging statements
4. Set logger SourceName value from configuration

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,41 +1,41 @@
 {
-  "Serilog": {
-    "MinimumLevel": {
+  "Logging": {
+    "LogLevel": {
+      //"Default": "Information",
       "Default": "Debug",
-      "Override": {
-        "Microsoft": "Information",
-        "Microsoft.AspNetCore": "Warning",
-        "System": "Error"
-      }
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     },
-    "Enrich": [
-      "FromLogContext",
-      "WithEnvironmentName",
-      "WithMachineName"
-    ],
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
-        }
+    "EventLog": {
+      "LogLevel": {
+        //"Default": "Information",
+        "Default": "Debug"
+        //"Microsoft.Hosting.Lifetime": "Warning",
+        //"System": "Warning"
       },
-      {
-        "Name": "Trace",
-        "Args": {
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
-        }
-      },      
-      {
-        "Name": "EventLog",
-        "Args": {
-          "source": "Web Api",
-          "logName": "Application",
-          "manageEventSource": true,
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
-        }
+      //"LogName": "Application",
+      //"SourceName": ".NET Runtime"
+      "LogName": "Web Api - LogName",
+      "SourceName": "Web Api - Volvi a cambiar"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Debug", // Overrides preceding LogLevel:Default setting.
+        "Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
       }
-    ]
-  },
+    }
+    //,
+    //"Debug": { // Debug provider.
+    //  "LogLevel": {
+    //    "Default": "Information", // Overrides preceding LogLevel:Default setting.
+    //    "Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
+    //  }
+    //},
+    //"DebugViewOutput": {
+    //  "LogLevel": {
+    //    "Default": "Information"
+    //  }
+    //}
+  },  
   "AllowedHosts": "*"
 }
