Log to EventLog Viewer from built in microsoft extensions logging

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -13,29 +13,30 @@
         //"Microsoft.Hosting.Lifetime": "Warning",
         //"System": "Warning"
       },
-      //"LogName": "Application",
-      //"SourceName": ".NET Runtime"
-      "LogName": "Web Api - LogName",
-      "SourceName": "Web Api - Volvi a cambiar"
+      "SourceName": "Web Api - En Application"
     },
     "Console": {
       "LogLevel": {
         "Default": "Debug", // Overrides preceding LogLevel:Default setting.
         "Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
       }
+    },
+    "Debug": { // Debug provider.
+      "LogLevel": {
+        "Default": "Debug", // Overrides preceding LogLevel:Default setting.
+        "Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
+      }
+    },
+    "DebugViewOutput": {
+      "LogLevel": {
+        "Default": "Debug"
+      }
+    },
+    "EventSource": {
+      "LogLevel": {
+        "Microsoft": "Information"
+      }
     }
-    //,
-    //"Debug": { // Debug provider.
-    //  "LogLevel": {
-    //    "Default": "Information", // Overrides preceding LogLevel:Default setting.
-    //    "Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
-    //  }
-    //},
-    //"DebugViewOutput": {
-    //  "LogLevel": {
-    //    "Default": "Information"
-    //  }
-    //}
-  },  
+  },
   "AllowedHosts": "*"
 }
